# wasm_manager

./: Cargo.toml  README.md
sdk/: Cargo.toml
sdk/app/: app1.rs  app2.rs
sdk/src/: lib.rs
src/: app.rs  error.rs  lib.rs  manger.rs  runtime.rs  tools.rs
src/abi/: demo_abi.rs  mod.rs
src/cmd/: demo_plugin.rs  test_manager.rs  test_manager_app_1_and_2.rs
