[package]
name = "wasm_manager"
version = "0.1.0"
edition = "2021"
authors = ["wujehy@gmail.com" , "wujehy@qq.com"]
description = "An implementation of the wasm manager, a prototype for projects developed in plug-in mode."
[[bin]]
name = "test_wasmer"
path = "src/cmd/test_manager.rs"
[dependencies]
wasmer = { version = "4", features = [ "default"] }
anyhow = "1.0"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
tracing-appender = "0.2"
tracing-error = "0.2"
tokio = { version = "1.37.0", features = ["rt" , "macros" ,"rt-multi-thread","time" ] }
once_cell = "1"